<resources>
    <string name="app_name">Shopr</string>
    <string name="action_settings">Settings</string>
    <string name="title_list">Items</string>
    <string name="title_map">Shops</string>
    <string name="reason_empty">Close to you, store open</string>
    <string name="like">I like something about this item</string>
    <string name="dislike">I dislike something about this item</string>
    <string name="description_item_picture">Clothing item</string>
    <string name="title_activity_critique">CritiqueActivity</string>
    <string name="title_activity_stereotype">User type determination</string>
    <string name="detail_like">What do you like about \"%s\" and want to see more of?</string>
    <string name="detail_dislike">What do you not like about \"%s\" and want to see less of?</string>
    <string name="update_recommendations">Update recommendations</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="label">Label</string>
    <string name="type">Type</string>
    <string-array name="sex">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="action_restart">Start over</string>
    <string name="getting_your_location">Getting your location…</string>
    <string name="has_x_recommendations">sells %s recommended item</string>
    <string name="title_activity_importer">ImporterActivity</string>
    <string name="import_items">Import items</string>
    <string name="import_shops">Import shops</string>
    <string name="import_no_file_manager">Importing requires a file manager to be installed.</string>
    <string name="import_a_csv_file">Import a CSV file</string>
    <string name="action_import">Import data</string>
    <string name="import_start">Importing…</string>
    <string name="import_successful">Import successful.</string>
    <string name="import_failed">Import failed.</string>
    <string name="last_critique">Last critique</string>
    <string name="use_fake_location">Use fake location</string>
    <string name="diversity_on_negative_progress">Diversity on negative progress</string>
    <string name="no_item_dropping">Also no recs exclusion</string>
    <string name="title_activity_test_setup">Test Setup</string>
    <string name="test_setup">Test Setup</string>
    <string name="start">Start</string>
    <string name="your_name_or_pseudonym">Your name or pseudonym</string>
    <string name="title_activity_results">Test Results</string>
    <string name="thank_you_this_task_is_finished_">Thank you, this task is finished!</string>
    <string name="no_data">no data</string>
    <string name="task_type">Task type</string>
    <string name="duration">Duration</string>
    <string name="durationRecommendation">Duration since Recommendation start</string>
    <string name="cycle_count">Cycle count</string>
    <string name="title_activity_item_details">Item Details</string>
    <string name="choice_confirmation">Are you happy with \"%1$s\" from %2$s?</string>
    <string name="choice_instructions">If not, press back.</string>
    <string name="choice_finish">Select this and finish</string>
    <string name="your_selected_item">Your selected item</string>
    <string name="swim_suit">Swim suit</string>
    <string name="trunks">Trunks</string>
    <string name="blouse">Blouse</string>
    <string name="shirt">Shirt</string>
    <string name="trousers">Trousers</string>
    <string name="chino">Chino</string>
    <string name="coat">Coat</string>
    <string name="jacket">Jacket</string>
    <string name="jeans">Jeans</string>
    <string name="dress">Dress</string>
    <string name="poloshirt">Poloshirt</string>
    <string name="sweater">Sweater</string>
    <string name="swimwear">Swimwear</string>
    <string name="skirt">Skirt</string>
    <string name="shorts">Shorts</string>
    <string name="cardigan">Cardigan</string>
    <string name="top">Top</string>
    <string name="t_shirt">T-shirt</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unisex">Unisex</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="petrol">Petrol</string>
    <string name="pink">Pink</string>
    <string name="lilac">Lilac</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="colored">Multi-coloured</string>
    <string name="gold">Gold</string>
    <string name="grey">Grey</string>
    <string name="green">Green</string>
    <string name="olive">Olive</string>
    <string name="orange">Orange</string>
    <string name="silver">Silver</string>
    <string name="black">Black</string>
    <string name="turquoise">Turquoise</string>
    <string name="white">White</string>
    <string name="beige">Beige</string>
    <string name="acryl">Acryl</string>
    <string name="cremeColored">Creme colored</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="lightblue">Light Blue</string>
    <string name="less_than_25">less than 25 €</string>
    <string name="_25_to_50">25 to 50 €</string>
    <string name="_50_to_75">50 to 75 €</string>
    <string name="_75_to_100">75 to 100 €</string>
    <string name="_100_to_150">100 to 150 €</string>
    <string name="_150_to_200">150 to 200 €</string>
    <string name="_200_or_more">200 € or more</string>
    <string name="only">only %s</string>
    <string name="preferably">preferably %s</string>
    <string name="avoid">avoid %s</string>
    <string name="restart_test">Restart test</string>
    <string name="selection_hint">Select one or more</string>
    <string name="title_selected_item_position">Item\'s position</string>
    <string name="title_item_coverage">Item coverage</string>
    <string name="StereotypeWelcome">Please fill in the form in order to determine your style.</string>
    <string name="StereotypeAge">Age:</string>
    <string name="StereotypeJob">Job:</string>
    <string name="StereotypeSpinnerPrompt">Job</string>
    <string name="StereotypeMusic">Preferred Music:</string>
    <string name="UINextStep">Proceed</string>
    <string name="jobPupil">Pupil</string>
    <string name="jobStudent">Student</string>
    <string name="jobResearcher">Researcher</string>
    <string name="jobManager">Manager</string>
    <string name="jobSalesperson">Salesperson</string>
    <string name="jobCashier">Cashier</string>
    <string name="jobChef">Chef</string>
    <string name="jobWaiter">Waiter</string>
    <string name="jobNurse">Nurse</string>
    <string name="jobCustomerConsultant">Customer Consultant</string>
    <string name="jobCraftsman">Craftsman</string>
    <string name="jobSecretary">Secretary</string>
    <string name="jobAssistant">Assistant</string>
    <string name="jobLawyer">Lawyer</string>
    <string name="jobProgrammer">Programmer</string>
    <string name="jobAthlete">Athlete</string>
    <string name="jobUnemployed">Unemployed</string>
    <string name="jobOthers">Others</string>
    <string-array name="StereotypeJobArray">
        <item>@string/jobPupil</item>
        <item>@string/jobStudent</item>
        <item>@string/jobResearcher</item>
        <item>@string/jobManager</item>
        <item>@string/jobSalesperson</item>
        <item>@string/jobCashier</item>
        <item>@string/jobChef</item>
        <item>@string/jobWaiter</item>
        <item>@string/jobNurse</item>
        <item>@string/jobCustomerConsultant</item>
        <item>@string/jobCraftsman</item>
        <item>@string/jobSecretary</item>
        <item>@string/jobAssistant</item>
        <item>@string/jobLawyer</item>
        <item>@string/jobProgrammer</item>
        <item>@string/jobAthlete</item>
        <item>@string/jobUnemployed</item>
        <item>@string/jobOthers</item>
    </string-array>
    <string name="MusicDnB">DnB</string>
    <string name="MusicHipHop">Hip-Hop</string>
    <string name="MusicJazz">Jazz</string>
    <string name="MusicIndie">Indie</string>
    <string name="MusicFolk">Folk</string>
    <string name="MusicPop">Pop</string>
    <string name="MusicClassic">Classic</string>
    <string name="MusicElectronic">Electronic</string>
    <string name="MusicRock">Rock</string>
    <string name="sexPrompt">Sex</string>
    <string name="stereotypeFormSex">Sex:</string>
    <string name="stereotypeSelectionText">Which of these styles fits you the most?</string>
    <string name="adidas">Adidas</string>
    <string name="allegraK">Allegra K</string>
    <string name="boomBap">boom Bap</string>
    <string name="boss">Hugo Boss</string>
    <string name="brax">Brax</string>
    <string name="byebyekitty">Bye Bye Kitty</string>
    <string name="ca">C &amp; A</string>
    <string name="carhartt">Carhartt</string>
    <string name="chanel">Chanel</string>
    <string name="converse">Converse</string>
    <string name="cupcakecult">Cupcakecult</string>
    <string name="dc">DC</string>
    <string name="denim">Denim</string>
    <string name="dickies">Dickies</string>
    <string name="diesel">Diesel</string>
    <string name="dior">C. Dior</string>
    <string name="esprit">Esprit</string>
    <string name="etnies">Etnies</string>
    <string name="fjallraven">Fjallraven</string>
    <string name="forever21">Forever 21</string>
    <string name="gstar">G Star</string>
    <string name="gucci">Gucci</string>
    <string name="hm">H &amp; M</string>
    <string name="hrlondon">Hrlondon</string>
    <string name="hellbunny">Hellbunny</string>
    <string name="innocent">Innocent</string>
    <string name="jcrew">J Crew</string>
    <string name="lacoste">Lacoste</string>
    <string name="levis">Levis</string>
    <string name="livingdeadsouls">Livingdeadsouls</string>
    <string name="louisvitton">Louis Vitton</string>
    <string name="lrg">Lrg</string>
    <string name="mazine">Mazine</string>
    <string name="newyorker">New Yorker</string>
    <string name="nike">Nike</string>
    <string name="pepe">Pepe</string>
    <string name="prada">Prada</string>
    <string name="ralphlauren">Ralph Lauren</string>
    <string name="reebok">Reebok</string>
    <string name="sOliver">S. Oliver</string>
    <string name="scotchsoda">Scotchsoda</string>
    <string name="spiral">Spiral</string>
    <string name="superdry">Superdry</string>
    <string name="tomtailor">Tom Tailor</string>
    <string name="tommyhilfiger">Tommy Hilfiger</string>
    <string name="vans">Vans</string>
    <string name="versace">Versace</string>
    <string name="athletic">Athletic</string>
    <string name="baggy">Baggy</string>
    <string name="triangle">Triangle</string>
    <string name="emo">Emo</string>
    <string name="tight">Tight</string>
    <string name="girly">Girly</string>
    <string name="hoody">Hoody</string>
    <string name="classic">Classic</string>
    <string name="curt">Curt</string>
    <string name="leather">Leather</string>
    <string name="logo">Logo</string>
    <string name="girl">Girl</string>
    <string name="swatch">Swatch</string>
    <string name="navy">Navy</string>
    <string name="description_context_welcome">Please set your current context factors, such that you can be provided the best possible recommendations.</string>
    <string name="headingShopSpecific">Shop Specific Settings</string>
    <string name="selectShopDistance">Distance to shop:</string>
    <string name="selectShopOpeningHours">Shop shall be open:</string>
    <string name="showItemsThatAreNotInStock">Only show items in stock:</string>
    <string name="showCrowdedShops">Show shops that are crowded:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_today">Open today:</string>
    <string name="DistanceToShop">Distance:</string>
    <string name="headingLocation">Location settings</string>
    <string name="context_current_location">My location:</string>
</resources>