<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewContextSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_context_welcome" />

    <TextView
        android:id="@+id/locationHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headingLocation"
        android:textSize="@dimen/textSizeHeading"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_below="@id/textViewContextSettings"/>

    <TextView
        android:id="@+id/textView_context_my_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/context_current_location"
        android:layout_below="@id/locationHeading"/>

    <Spinner
        android:id="@+id/context_spinner_my_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_toRightOf="@id/textView_context_my_location"
        android:layout_toEndOf="@id/textView_context_my_location"
        android:layout_alignTop="@id/textView_context_my_location"
        android:entries="@array/availableLocations"/>

    <TextView
        android:id="@+id/shopHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headingShopSpecific"
        android:textSize="@dimen/textSizeHeading"
        android:textStyle="bold"
        android:layout_below="@id/context_spinner_my_location"/>

    <TextView
        android:id="@+id/shopDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopHeading"
        android:layout_marginTop="5dp"
        android:text="@string/selectShopDistance"
        android:textSize="@dimen/textSize" />

    <Spinner
        android:id="@+id/contextShopDistanceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shopDistance"
        android:layout_alignStart="@id/context_spinner_my_location"
        android:layout_alignLeft="@id/context_spinner_my_location"
        android:layout_alignTop="@id/shopDistanceTextView"
        />

    <TextView
        android:id="@+id/shopOpeningHoursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopDistanceTextView"
        android:layout_marginTop="30dp"
        android:text="@string/selectShopOpeningHours"
        android:textSize="@dimen/textSize" />

    <Spinner
        android:id="@+id/contextShopOpeningHoursSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/shopOpeningHours"
        android:layout_below="@id/contextShopDistanceSpinner"
        android:layout_alignStart="@id/contextShopDistanceSpinner"
        android:layout_alignLeft="@id/contextShopDistanceSpinner"
        android:layout_alignTop="@id/shopOpeningHoursTextView"
        android:gravity="end"
        />

    <Switch
        android:id="@+id/contextShopStockOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showItemsThatAreNotInStock"
        android:layout_below="@+id/contextShopOpeningHoursSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:checked="false"
        android:textSize="@dimen/textSize"/>

    <Switch
        android:id="@+id/contextShopCrowdedness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showCrowdedShops"
        android:layout_below="@id/contextShopStockOptions"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:checked="true"
        android:textSize="@dimen/textSize" />

    <Button
        android:id="@+id/button_context_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UINextStep"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/contextShopCrowdedness"/>

</RelativeLayout>